--- a/arch/arm64/configs/neon_kenzo_defconfig
+++ b/arch/arm64/configs/neon_kenzo_defconfig
@@ -50,8 +50,7 @@ CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
-CONFIG_SYSVIPC=y
-CONFIG_SYSVIPC_SYSCTL=y
+# CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -392,7 +391,6 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
-CONFIG_SYSVIPC_COMPAT=y
 
 #
 # Power management options
