ARM: dts: kenzo: Only build device specific dtb
* Why include all qcom dtb while it ain't used? Reduces dt.img size.

Signed-off-by: khanfrd <khanfrd94@gmail.com>

--- a/arch/arm64/configs/neon_kenzo_defconfig
+++ b/arch/arm64/configs/neon_kenzo_defconfig
@@ -38,6 +38,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_LOCALVERSION="-NeOnKeRneL"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_MACH_XIAOMI_KENZO=y
 
 #
 # General setup
