--- a/arch/arm/boot/dts/qcom/msm8952-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952-pinctrl.dtsi
@@ -31,6 +31,24 @@
 			};
 		};
 
+		cdc-reset-line {
+			qcom,pins = <&gp 133>;
+			qcom,num-grp-pins = <1>;
+			qcom,pin-func = <0>;
+			label = "cdc-reset-line";
+			cdc_reset_line_act: cdc_reset_line_on {
+				drive-strength = <16>;
+				bias-disable;
+				output-high;
+			};
+
+			cdc_reset_line_sus: cdc_reset_line_off {
+				drive-strength = <16>;
+				bias-disable;
+				output-low;
+			};
+		};
+
 		cdc-pdm-lines {
 			qcom,pins = <&gp 69>, <&gp 73>, <&gp 74>;
 			qcom,num-grp-pins = <3>;
