--- a/arch/arm/boot/dts/qcom/msm8956.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2014-2015, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2016 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -60,7 +61,7 @@
 			linux,reserve-contiguous-region;
 			linux,reserve-region;
 			linux,remove-completely;
-			reg = <0x0 0x85e00000 0x0 0x0a00000>;
+			reg = <0x0 0x86300000 0x0 0x0500000>;
 			label = "other_ext_mem";
 		};
 
@@ -115,6 +116,14 @@
 			linux,reserve-contiguous-region;
 			reg = <0x0 0x0 0x0 0x400000>;
 			label = "adsp_mem";
+		};
+
+	tzapp_mem: tzapp_region@0 {
+		linux,reserve-contiguous-region;
+		linux,reserve-region;
+		linux,remove-completely;
+		reg = <0 0x8DD00000 0 0x1900000>;
+		label = "tzapp_mem";
 		};
 	};
 };
@@ -1400,8 +1409,8 @@
 		reg = <0xb017000 0x1000>;
 		reg-names = "wdt-base";
 		interrupts = <0 3 0>, <0 4 0>;
-		qcom,bark-time = <11000>;
-		qcom,pet-time = <10000>;
+		qcom,bark-time = <20000>;
+		qcom,pet-time = <15000>;
 		qcom,ipi-ping;
 	};
 
@@ -1497,9 +1506,9 @@
 		qcom,ce-opp-freq = <100000000>;
 	};
 
-	qcom_seecom: qseecom@85e00000 {
+	qcom_seecom: qseecom@8dd00000 {
 		compatible = "qcom,qseecom";
-		reg = <0x85e00000 0x500000>;
+		reg = <0x8dd00000 0x1900000>;
 		reg-names = "secapp-region";
 		qcom,hlos-num-ce-hw-instances = <1>;
 		qcom,hlos-ce-hw-instance = <0>;
@@ -2141,7 +2150,7 @@
 			"AIF4 VI", "MCLK",
 			"RX_BIAS", "MCLK",
 			"MADINPUT", "MCLK",
-			"AMIC2", "MIC BIAS2",
+			/*"AMIC2", "MIC BIAS2",
 			"MIC BIAS2", "Headset Mic",
 			"AMIC3", "MIC BIAS2",
 			"MIC BIAS2", "ANCRight Headset Mic",
@@ -2164,19 +2173,25 @@
 			"DMIC5", "MIC BIAS4",
 			"MIC BIAS4", "Digital Mic5",
 			"SpkrLeft IN", "SPK1 OUT",
-			"SpkrRight IN", "SPK2 OUT";
+			"SpkrRight IN", "SPK2 OUT";*/
+			"AMIC1", "MIC BIAS1",
+			"MIC BIAS1", "Handset Mic",
+			"AMIC2", "MIC BIAS2",
+			"MIC BIAS2", "Headset Mic",
+			"AMIC3", "MIC BIAS3",
+			"MIC BIAS3", "Secondary Mic";
 
 		qcom,msm-gpios =
-			"us_eu_gpio";
+			"ext_spk_gpio";
 		qcom,pinctrl-names =
-			"all_off",
-			"us_eu_gpio_act";
+			"spk_ext_pa_act",
+			"spk_ext_pa_sus";
 		pinctrl-names =
-			"all_off",
-			"us_eu_gpio_act";
-		pinctrl-0 = <&cross_conn_det_sus>;
-		pinctrl-1 = <&cross_conn_det_act>;
-		qcom,cdc-us-euro-gpios = <&msm_gpio 144 0>;
+			"spk_ext_pa_act",
+			"spk_ext_pa_sus";
+		pinctrl-0 = <&spk_ext_pa_active>;
+		pinctrl-1 = <&spk_ext_pa_suspend>;
+		qcom,msm-spk-ext-pa = <&msm_gpio 101 0>;
 
 		qcom,msm-mbhc-hphl-swh = <0>;
 		qcom,msm-mbhc-gnd-swh = <0>;
@@ -2217,11 +2232,11 @@
 				"msm-dai-q6-dev.12292", "msm-dai-q6-dev.12293";
 		asoc-codec = <&stub_codec>;
 		asoc-codec-names = "msm-stub-codec.1";
-		qcom,max-aux-codec = <2>;
+		/*qcom,max-aux-codec = <2>;
 		qcom,aux-codec = "wsa881x.20170211", "wsa881x.20170212",
 				 "wsa881x.21170213", "wsa881x.21170214";
 		qcom,aux-codec-prefix = "SpkrRight", "SpkrLeft",
-					"SpkrRight", "SpkrLeft";
+					"SpkrRight", "SpkrLeft";*/
 	};
 
 	wcd9xxx_intc: wcd9xxx-irq {
@@ -2233,12 +2248,25 @@
 		interrupt-names = "cdc-int";
 	};
 
+	wcd_rst_gpio: wcd_gpio_ctrl {
+		compatible = "qcom,wcd-gpio-ctrl";
+		qcom,cdc-rst-n-gpio = <&msm_gpio 133 0>;
+		pinctrl-names = "aud_active", "aud_sleep";
+		pinctrl-0 = <&cdc_reset_line_act>;
+		pinctrl-1 = <&cdc_reset_line_sus>;
+	};
+
 	clock_audio: audio_ext_clk {
 		compatible = "qcom,audio-ref-clk";
 		qcom,audio-ref-clk-gpio = <&pm8950_gpios 1 0>;
 		clock-names = "osr_clk";
 		clocks = <&clock_gcc clk_div_clk2>;
 		qcom,node_has_rpm_clock;
+		qcom,codec-mclk-clk-freq = <9600000>;
+		pinctrl-names = "i2s_mclk_sleep",
+				"i2s_mclk_active";
+		pinctrl-0 = <&mclk_line_sus>;
+		pinctrl-1 = <&mclk_line_act>;
 		#clock-cells = <1>;
 	};
 
@@ -2658,7 +2686,6 @@
 			17 18 19 20 21 22 23 24 25 26 27 28 29
 			30>;
 
-		qcom,cdc-reset-gpio = <&msm_gpio 133 0>;
 		cdc-vdd-buck-supply = <&eldo2_8976>;
 		qcom,cdc-vdd-buck-voltage = <1800000 1800000>;
 		qcom,cdc-vdd-buck-current = <650000>;
@@ -2696,8 +2723,12 @@
 		qcom,cdc-dmic-sample-rate = <4800000>;
 		qcom,cdc-mad-dmic-rate = <600000>;
 
-		clock-names = "wcd_clk";
-		clocks = <&clock_audio clk_audio_pmi_clk>;
+		qcom,wcd-rst-gpio-node = <&wcd_rst_gpio>;
+
+		clock-names = "wcd_pmi_clk",
+				"wcd_ap_clk";
+		clocks = <&clock_audio clk_audio_pmi_clk>,
+				<&clock_audio clk_audio_ap_clk1>;
 	};
 };
 
@@ -2706,10 +2737,10 @@
 		status = "ok";
 		qcom,mode = <1>;
 		qcom,pull = <5>;
-		qcom,vin-sel = <2>;
+		qcom,vin-sel = <3>;
 		qcom,src-sel = <2>;
 		qcom,master-en = <1>;
-		qcom,out-strength = <2>;
+		qcom,out-strength = <3>;
 	};
 	gpio@c600 {
 		status = "ok";
@@ -2718,6 +2749,17 @@
 		qcom,vin-sel = <0>;
 		qcom,src-sel = <0>;
 		qcom,master-en = <1>;
+	};
+};
+
+&pmi8950_gpios{
+	gpio@c000{
+			status = "okay";
+			qcom,mode = <1>;		/*DIGITAL OUT*/
+			qcom,pull = <5>;		/*NO PULL*/
+			qcom,src-sel = <6>; 		/*DTEST1 OUT*/
+			qcom,master-en = <1>;		/*ENABLE GPIO*/
+			qcom,out-strength = <3>;	/*Max strength current*/
 	};
 };
 
