--- a/arch/arm/boot/dts/qcom/msm8976-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-pinctrl.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2014-2015, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2016 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -31,6 +32,40 @@
 			};
 		};
 
+		spk-ext-pa {
+			qcom,pins = <&gp 101>;
+			qcom,num-grp-pins = <1>;
+			qcom,pin-func = <0>;
+			label = "spk-ext-pa-sw";
+			spk_ext_pa_active: lines_on {
+				drive-strength = <8>;
+				output-low;
+				bias-pull-down;
+			};
+			spk_ext_pa_suspend: lines_off {
+				drive-strength = <2>;
+				bias-pull-down;
+			};
+		};
+
+		cdc-reset-line {
+			qcom,pins = <&gp 133>;
+			qcom,num-grp-pins = <1>;
+			qcom,pin-func = <0>;
+			label = "cdc-reset-line";
+			cdc_reset_line_act: cdc_reset_line_on {
+				drive-strength = <16>;
+				bias-disable;
+				output-high;
+			};
+
+			cdc_reset_line_sus: cdc_reset_line_off {
+				drive-strength = <16>;
+				bias-disable;
+				output-low;
+			};
+		};
+
 		cdc-pdm-lines {
 			qcom,pins = <&gp 120>, <&gp 121>;
 			qcom,num-grp-pins = <2>;
@@ -46,9 +81,23 @@
 			};
 		};
 
+		mclk-line {
+			qcom,pins = <&gp 116>;
+			qcom,num-grp-pins = <1>;
+			qcom,pin-func = <1>;
+			label = "mclk-line";
+			mclk_line_act: mclk_line_on {
+				drive-strength = <8>;
+			};
+			mclk_line_sus: mclk_line_off {
+				drive-strength = <2>;
+				bias-disable;
+			};
+		};
+
 		cdc-pdm-2-lines {
-			qcom,pins = <&gp 116>, <&gp 117>, <&gp 118>, <&gp 119>;
-			qcom,num-grp-pins = <4>;
+			qcom,pins = /*<&gp 116>, */<&gp 117>, <&gp 118>, <&gp 119>;
+			qcom,num-grp-pins = <3>;
 			qcom,pin-func = <2>;
 			label = "cdc-pdm-2-lines";
 			cdc_pdm_lines_2_act: pdm_lines_2_on {
@@ -71,7 +120,20 @@
 				bias-pull-down;
 			};
 		};
-
+hall_int_pin{
+			qcom,pins = <&gp 107>;
+			qcom,pin-func = <0>;
+			qcom,num-grp-pins = <1>;
+			label = "hall_int_pin";
+			hall_int_active: active {
+				drive-strength = <6>;
+				bias-pull-up;
+			};
+			hall_int_suspend: suspend {
+				drive-strength = <6>;
+				bias-pull-up;
+			};
+		};
 		blsp1_uart1_active {
 			qcom,pins = <&gp 0>, <&gp 1>, <&gp 2>, <&gp 3>;
 			qcom,num-grp-pins = <4>;
@@ -620,6 +682,31 @@
 				bias-pull-down; /* PULL DOWN */
 			};
 		};
+
+		pmx_ts_power_active {
+			qcom,pins = <&gp 134>;
+			qcom,pin-func = <0>;
+			qcom,num-grp-pins = <1>;
+			label = "pmx_ts_power_active";
+
+			ts_power_active: ts_power_active {
+				drive-strength = <16>;
+				bias-pull-up;
+			};
+		};
+
+		pmx_ts_power_suspend {
+			qcom,pins = <&gp 134>;
+			qcom,pin-func = <0>;
+			qcom,num-grp-pins = <1>;
+			label = "pmx_ts_power_suspend";
+
+			ts_power_suspend: ts_power_suspend {
+				drive-strength = <16>;
+				bias-disable;
+			};
+		};
+
 
 		cam_sensor_front1_default {
 			/* RESET, STANDBY */
@@ -1386,6 +1473,33 @@
 				bias-pull-down;
 			};
 		};
+
+		pmx_ts_power_ldo_active {
+			qcom,pins = <&gp 134>;
+			qcom,pin-func = <0>;
+			qcom,num-grp-pins = <1>;
+			label = "pmx_ts_power_ldo_active";
+
+			ts_power_ldo_active: ts_power_ldo_active {
+				drive-strength = <16>;
+				bias-pull-up;
+			};
+		};
+
+		pmx_ts_power_ldo_suspend {
+			qcom,pins = <&gp 134>;
+			qcom,pin-func = <0>;
+			qcom,num-grp-pins = <1>;
+			label = "pmx_ts_power_ldo_suspend";
+
+			ts_power_ldo_suspend: ts_power_ldo_suspend {
+				drive-strength = <16>;
+				bias-disable;
+			};
+		};
+
+
+
 
 		pri-tlmm-lines {
 			qcom,pins = <&gp 123>, <&gp 124>, <&gp 125>;
