Xiaomi kernel changes: ARM64
Signed-off-by: khanfrd <khanfrd94@gmail.com>

--- a/arch/arm64/configs/kenzo_defconfig
+++ b/arch/arm64/configs/kenzo_defconfig
@@ -5,7 +5,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
+CONFIG_IKCONFIG_PROC=n
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_CPUACCT=y
@@ -288,15 +288,16 @@ CONFIG_SENSORS_MMC3416X=y
 CONFIG_SENSORS_AKM09911=y
 CONFIG_SENSORS_AKM8963=y
 CONFIG_INPUT_FPC1020=y
+CONFIG_FINGERPRINT_GOODIX_GF318M=y
 CONFIG_SENSORS_BMA2X2=y
 CONFIG_SENSORS_MC3430=y
 CONFIG_SENSORS_ISL29044A=y
 CONFIG_SENSORS_CAPELLA_CM36283=y
 # CONFIG_SERIO_I8042 is not set
 # CONFIG_VT is not set
-CONFIG_SERIAL_MSM_HS=y
-CONFIG_SERIAL_MSM_HSL=y
-CONFIG_SERIAL_MSM_HSL_CONSOLE=y
+#CONFIG_SERIAL_MSM_HS=y
+#CONFIG_SERIAL_MSM_HSL=y
+#CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 CONFIG_SERIAL_MSM_SMD=y
 CONFIG_DIAG_CHAR=y
 CONFIG_HW_RANDOM=y
@@ -642,3 +643,4 @@ CONFIG_RC_DEVICES=y
 CONFIG_IR_PWM=y
 # CONFIG_IR_MSM_GENI is not set
 CONFIG_MSM_TZ_LOG=y
+CONFIG_SERIAL_NUM=y
