--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -874,5 +874,16 @@ config SENSORS_ISL29044A
 	help
 	 This option enables support for the INTERSIL ISL29044A P/L sensor.
 
+config INPUT_FPC1020_XIAOMI
+	tristate "Fpc1020 fingerprint sensor support"
+	depends on SPI
+	help
+	  Say Y here if you have Fpc1020 sensor hooked to an SPI bus.
+
+config HALL_XIAOMI
+	tristate "HALL Switch"
+	help
+	 If you say yes here, you get support for hall switch control device
+
 endif
 
