--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,10 @@ extra_certificates
 signing_key.priv
 signing_key.x509
 x509.genkey
+
+# Add My Ignores
+dtbTool
+mkbootimg
+ramdisk.img
+build.sh
+nk.sh
