--- a/arch/arm64/configs/neon_kenzo_defconfig
+++ b/arch/arm64/configs/neon_kenzo_defconfig
@@ -104,6 +104,7 @@ CONFIG_IKCONFIG=y
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
+CONFIG_CGROUP_BFQIO=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
@@ -262,6 +263,9 @@ CONFIG_IOSCHED_TEST=m
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_CFQ=y
