--- a/arch/arm64/configs/neon_kenzo_defconfig
+++ b/arch/arm64/configs/neon_kenzo_defconfig
@@ -39,6 +39,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_LOCALVERSION="-NeOnKeRneL"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_MACH_XIAOMI_KENZO=y
+CONFIG_SOUND_CONTROL=y
 
 #
 # General setup
