--- a/arch/arm64/configs/neon_kenzo_defconfig
+++ b/arch/arm64/configs/neon_kenzo_defconfig
@@ -36,7 +36,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 # Neon Kernel setup
 #
-CONFIG_LOCALVERSION="-NeOnKeRneL"
+CONFIG_LOCALVERSION="-NeOnKeRneL-Kenzo-1.0-"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_MACH_XIAOMI_KENZO=y
 CONFIG_SOUND_CONTROL=y
