--- a/arch/arm64/configs/neon_kenzo_defconfig
+++ b/arch/arm64/configs/neon_kenzo_defconfig
@@ -41,6 +41,7 @@ CONFIG_LOCALVERSION="-NeOnKeRneL-Kenzo-1.0-"
 CONFIG_MACH_XIAOMI_KENZO=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_CLUSTER_PLUG=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 #
 # General setup
