--- a/arch/arm/boot/dts/qcom/msm8956-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-mtp.dtsi
@@ -199,6 +199,16 @@
 		vdd_ana-supply = <&pm8950_l6>;
 		vdd_io-supply = <&pm8950_l6>;
 	};
+
+	goodix_gf318m {
+		compatible = "goodix,fingerprint";
+		goodix,gpio_reset =<&msm_gpio 110 0>;
+		goodix,gpio_irq = <&msm_gpio 106 0>;
+		goodix,gpio_pwr = <&msm_gpio 119 0>;
+		vcc_spi-supply  = <&pm8950_l10>;
+		vdd_ana-supply  = <&pm8950_l10>;
+		vdd_io-supply   = <&pm8950_l10>;
+	};
 };
 
 &blsp1_uart2 {
