--- a/arch/arm64/configs/neon_kenzo_defconfig
+++ b/arch/arm64/configs/neon_kenzo_defconfig
@@ -38,6 +38,9 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_LOCALVERSION="-NeOnKeRneL"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_INPUT_FPC1020_XIAOMI=y
+CONFIG_FINGERPRINT_GOODIX_GF318M=y
+CONFIG_HALL_XIAOMI=y
 
 #
 # General setup
@@ -1471,7 +1474,7 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
 # CONFIG_INPUT_KEYRESET is not set
 # CONFIG_INPUT_KEYCOMBO is not set
-CONFIG_SENSORS_HALL=y
+# CONFIG_SENSORS_HALL is not set
 
 #
 # Input Device Drivers
@@ -1562,7 +1565,7 @@ CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
-CONFIG_INPUT_FPC1020=y
+# CONFIG_INPUT_FPC1020 is not set
 CONFIG_INPUT_HBTP_INPUT=y
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_MPU3050 is not set
