--- a/arch/arm64/configs/neon_kenzo_defconfig
+++ b/arch/arm64/configs/neon_kenzo_defconfig
@@ -40,6 +40,7 @@ CONFIG_LOCALVERSION="-NeOnKeRneL-Kenzo-1.0-"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_MACH_XIAOMI_KENZO=y
 CONFIG_SOUND_CONTROL=y
+CONFIG_CLUSTER_PLUG=y
 
 #
 # General setup
